@@ -122,6 +122,8 @@ int JackServer::Open(jack_driver_desc_t* driver_desc, JSList* driver_params)
         jack_error("Cannot attach audio driver");
         return -1;
     }
+	
+	fAudioDriver->RenamePorts();
 
     if (fLoopback > 0 && fLoopbackDriver->Attach() != 0) {
         jack_error("Cannot attach loopback driver");
