@@ -4,9 +4,13 @@
 
 2007-08-21 Stephane Letz  <letz@grame.fr>
 
-	* Automatic server launch. Removes unneeded 'volatile' for JackTransportEngine::fWriteCounter.
+	* Fix backend port alias management (renaming in system:xxx).
 
 2007-08-20 Stephane Letz  <letz@grame.fr>
+
+	* Automatic server launch. Removes unneeded 'volatile' for JackTransportEngine::fWriteCounter.
+
+2007-08-19 Stephane Letz  <letz@grame.fr>
 
 	* Add "systemic" latencies management in CoreAudio driver.
 
